depends_core/src/macros/value/snapshots/depends_core__macros__value__derive__tests__value.snap
---
source: depends_core/src/macros/value/derive.rs
assertion_line: 104
expression: format_source(derive_value(input).to_string().as_str())
---
impl ::depends::core::Named for Foo {
    fn name() -> &'static str {
        "Foo"
    }
}
impl ::depends::core::HashValue for Foo {
    fn hash_value(&self, hasher: &mut impl ::std::hash::Hasher) -> ::depends::core::NodeHash {
        use ::std::hash::Hash;
        ::depends::core::NodeHash::Hashed({
            self.hash(hasher);
            hasher.finish()
        })
    }
}
impl ::depends::core::Clean for Foo {
    fn clean(&mut self) {}
}

