depends_core/src/macros/value/snapshots/depends_core__macros__value__derive__tests__value_generics.snap
---
source: depends_core/src/macros/value/derive.rs
assertion_line: 118
expression: format_source(derive_value(input).to_string().as_str())
---
impl<T> ::depends::core::Named for Foo<T> {
    fn name() -> &'static str {
        "Foo"
    }
}
impl<T> ::depends::core::HashValue for Foo<T> {
    fn hash_value(&self, hasher: &mut impl ::std::hash::Hasher) -> ::depends::core::NodeHash {
        use ::std::hash::Hash;
        ::depends::core::NodeHash::Hashed({
            self.hash(hasher);
            hasher.finish()
        })
    }
}
impl<T> ::depends::core::Clean for Foo<T> {
    fn clean(&mut self) {}
}

